thumbtabs alignment fix for mobile

--- a/jm-react-site/src/components/Video/Video.css
+++ b/jm-react-site/src/components/Video/Video.css
@@ -32,8 +32,7 @@
 }
 
 @media screen and (max-width: 1600px) {
-  .thumbtabs ul li a,
-  .thumbtabs ul li a img {
+  .thumbtabs img {
     width: 6rem;
   }
   .thumbtabs ul {
@@ -44,12 +43,13 @@
 }
 
 @media screen and (max-width: 1344px) {
-  .thumbtabs ul li a,
-  .thumbtabs ul li a img {
-    width: 4.5rem;
-  }
   .thumbtabs ul {
     grid-template-columns: repeat(auto-fit, 4.5rem);
+  }
+  .thumbtabs li,
+  .thumbtabs img {
+    width: 4.5rem;
+    height: 4.5rem;
   }
 }
 
@@ -58,12 +58,6 @@
     grid-column: sub-mid/sub-end;
     grid-row: sub-row-start/sub-row-mid;
     margin-top: 0;
-  }
-  .thumbtabs ul li a,
-  .thumbtabs ul li a img {
-    width: 5rem;
-    margin: 0;
-    padding: 0;
   }
 
   .thumbtabs ul {
@@ -76,7 +70,8 @@
     grid-template-columns: repeat(auto-fit, 5rem);
   }
 
-  .thumbtabs ul li {
+  .thumbtabs li,
+  .thumbtabs img {
     margin: 0;
     padding: 0;
     height: 5rem;
@@ -95,36 +90,26 @@
 }
 
 @media screen and (max-width: 630px) {
-  .thumbtabs ul li a,
-  .thumbtabs ul li a img {
+  .thumbtabs li,
+  .thumbtabs img {
+    height: 4rem;
     width: 4rem;
   }
-  .thumbtabs ul li {
-    height: 4rem;
-  }
+
   .thumbtabs ul {
     grid-template-columns: repeat(auto-fit, 4rem);
   }
 }
 
 @media screen and (max-width: 590px) {
-  .thumbtabs ul li a,
-  .thumbtabs ul li a img {
-    width: 4rem;
-  }
   .thumbtabs ul {
     grid-gap: 0.625rem;
     grid-template-columns: repeat(auto-fit, 4rem);
   }
-}
-
-@media screen and (max-width: 590px) {
-  .thumbtabs ul li a,
-  .thumbtabs ul li a img {
-    width: 3.5rem;
-  }
-  .thumbtabs ul li {
+  .thumbtabs li,
+  .thumbtabs img {
     height: 3.5rem;
+    width: 3.5rem;
   }
   .thumbtabs ul {
     grid-template-columns: repeat(auto-fit, 3.5rem);
